--- a/frontend/src/renderer/screens/disaster/disaster.html
+++ b/frontend/src/renderer/screens/disaster/disaster.html
@@ -149,6 +149,13 @@
   </div>
 </div>
 
+<!-- Pre-Disaster Section -->
+<div class="pre-disaster-section" id="preDisasterContent" style="display: none;">
+  <div id="preWeatherHeadline" class="weather-headline" style="margin-bottom:16px;"></div>
+  <div class="section-title" style="margin-top:0;">Pre-Disaster Weather Explorer</div>
+  <div id="preDisasterMap" class="map-container" style="width:100%; height:400px; border-radius:8px; box-shadow:0 2px 8px #0003;"></div>
+</div>
+
 <!-- Bottom Panel -->
 <div class="bottom-panel" id="bottomPanel">
   <div class="panel-header">
