--- a/frontend/src/renderer/screens/monitoring/monitoring.html
+++ b/frontend/src/renderer/screens/monitoring/monitoring.html
@@ -123,6 +123,27 @@
           this.logs = [];
           this.logContainer = document.querySelector(".logs-content");
           this.maxLogs = 50; // Keep only last 50 logs
+          this.speechEnabled = true;
+          this.speechSynth = window.speechSynthesis;
+        }
+
+        speak(text) {
+          if (!this.speechEnabled) return;
+
+          // Cancel any ongoing speech
+          this.speechSynth.cancel();
+
+          const utterance = new SpeechSynthesisUtterance(text);
+          utterance.rate = 0.9;
+          utterance.pitch = 1;
+          this.speechSynth.speak(utterance);
+        }
+
+        toggleSpeech() {
+          this.speechEnabled = !this.speechEnabled;
+          if (!this.speechEnabled) {
+            this.speechSynth.cancel(); // Stop any ongoing speech
+          }
         }
 
         log(message, type = "info") {
@@ -141,6 +162,7 @@
           }
 
           this.updateDisplay();
+          this.speak(message); // Speak new log messages
         }
 
         info(message) {
@@ -614,7 +636,7 @@
               return;
             }
 
-            const maxPlanes = 1000;
+            const maxPlanes = 500;
             const planes = data.states.slice(0, maxPlanes);
 
             function createRotatedPlaneIcon(heading) {
@@ -676,8 +698,24 @@
         }
       }
 
-      // Add a clear logs button to the panel header
+      // Add text-to-speech toggle and clear logs buttons to the panel header
       const panelHeader = document.querySelector(".panel-header");
+
+      // Text-to-speech toggle button
+      const ttsBtn = document.createElement("button");
+      ttsBtn.textContent = "🔊 Voice";
+      ttsBtn.className = "expand-btn";
+      ttsBtn.style.marginRight = "8px";
+      ttsBtn.setAttribute("data-enabled", "true");
+      ttsBtn.onclick = () => {
+        const isEnabled = ttsBtn.getAttribute("data-enabled") === "true";
+        ttsBtn.setAttribute("data-enabled", (!isEnabled).toString());
+        ttsBtn.textContent = isEnabled ? "🔇 Voice" : "🔊 Voice";
+        logger.toggleSpeech();
+        logger.info(`Text-to-speech ${isEnabled ? "disabled" : "enabled"}`);
+      };
+
+      // Clear logs button
       const clearLogsBtn = document.createElement("button");
       clearLogsBtn.textContent = "Clear";
       clearLogsBtn.className = "expand-btn";
@@ -686,6 +724,11 @@
         logger.clear();
         logger.info("Logs cleared");
       };
+
+      panelHeader.insertBefore(
+        ttsBtn,
+        panelHeader.querySelector(".expand-btn")
+      );
       panelHeader.insertBefore(
         clearLogsBtn,
         panelHeader.querySelector(".expand-btn")
