update the UI for Disaster page and fix the extra space issue in Pre disaster tab

--- a/frontend/src/renderer/screens/disaster/disaster.html
+++ b/frontend/src/renderer/screens/disaster/disaster.html
@@ -160,7 +160,7 @@
 <div class="bottom-panel" id="bottomPanel">
   <div class="panel-header">
     <div class="panel-title">Logs</div>
-    <button class="expand-btn" id="toggleLogsBtn">Hide ▼</button>
+    <button class="expand-btn" id="toggleLogsBtn">Expand ▲</button>
   </div>
   <div class="logs-content" id="logsContent">
     <div class="log-warning">Warning: No news articles found</div>
